# GCParallel

./: .gitignore  CMakeLists.txt
GCParallel/: CMakeLists.txt  GCParallel.cpp  GCParallel.h
Preprocessing/: correlationmatrix.csv  correlationmatrix.xlsx  correlationmatrixgenerator.py  cumulativegov.xlsx  draw.py  gcdcalc.py  gcdmatrix.txt  gcm-serriated.xlsx  gcm.csv  gcm.py  gcm.txt  gcm.xlsx  gcm10 - Copy.csv  gcm10.csv  gcm10.xlsx  gcm10_1 - Copy.csv  gcm10_1.csv  gcm10_1.xlsx  gcm10_2.csv  gcm10_2.xlsx  gcm50 - Copy.csv  gcm50.csv  gcm50.xlsx  gcparallelexec.cmd  gov.csv  gov.txt  gov.xlsx  gov10.csv  gov10_1.txt  gov10_2.txt  gov50.txt  govordering.py  govtogcm.cmd  govwithmeta.txt  graphletcorrelationcomparison.xlsx  kettlegovordered.csv  modularityindex.py  node enzyme mapping.csv  order_k.txt  order_s.txt  (+34 more)
Preprocessing/Graphviz/: 10.dot  10_1.dot  10_2.dot  50.dot  graphvizprocessor.py  original.dot  rel.dot  signededgelist.txt  watershed-kettle-label.dot  watershed-kettle.dot  watershed-s-nolabel.ps  watershed-similkameen-label.dot  watershed-similkameen.dot
Preprocessing/MicroarrayData/: automategov.sh  correlationmatrixgenerator-batch.py  correlationmatrixgenerator-batch2.py  correlationmatrixgenerator-random.py  correlationmatrixgenerator.py  gastro_cleaned.arff  gastro_cleaned_69A_attributeselection.arff  gcdcalc.py  gcm.py  graphvizprocessor.py  preprocessmicroarray.py  processcorrelation.py  test.py
